# libjingle4c

./: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  jingle.symbols  talk.vp
Documention/: utf2gbk.sh
Documention/gbk/: Readme.txt
Documention/utf-8/: Readme.txt
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
build-android/: build.sh
cif/: Makefile.am  Makefile.in  base64.cc  base64.h  chat.cc  chat.h  debuglog.cc  debuglog.h  jinglep2p.cc  jinglep2p.h  notify.cc  notify.h  roster.cc  roster.h  xmpp.cc  xmpp.h
jni/: Android.mk  Application.mk  libjingle.ver
msvs/: libjingle.sln  libjingle.vcxproj
service/: Makefile.am  Makefile.in  iceconfig.h  jingleinfotask.cc  jingleinfotask.h  message.cc  message.h  pingtask.cc  pingtask.h  presenceouttask.cc  presenceouttask.h  presencepushtask.cc  presencepushtask.h  rostergettask.cc  rostergettask.h  talkclient.cc  talkclient.h  xmppauth.cc  xmpppump.cc  xmpppump.h  xmppsocket.cc  xmppthread.cc  xmppthread.h
talk/: Makefile.am  Makefile.in
talk/base/: .thread.h.swp  Makefile.am  Makefile.in  basictypes.h  md5.cc  md5.h  task.cc  unixfilesystem.cc
talk/examples/login/: Makefile  login_main.cc  presenceouttask.h  presencepushtask.cc  presencepushtask.h  talkclient.cc  talkclient.h
talk/p2p/: Makefile.am  Makefile.in
talk/p2p/base/: .port.cc.swp  .relayport.cc.swp  .relayport.h.swp  .tcpport.cc.swp  relayserver.cc
talk/session/: Makefile.am  Makefile.in
talk/session/tunnel/: tunnelsessionclient.cc  tunnelsessionclient.h
talk/sound/: Makefile.am  Makefile.in
talk/xmllite/: Makefile.am  Makefile.in
talk/xmpp/: Makefile.am  Makefile.in
tests/: Makefile.am  Makefile.in  main_test.c
tests/test/: test.vcxproj  test.vcxproj.filters
