AM_CPPFLAGS = $(JINGLE_CPPDEFINES) $(JINGLE_CCFLAGS) $(JINGLE_CXXFLAGS)
AM_CPPFLAGS += -I$(top_srcdir)

noinst_LTLIBRARIES = libservice.la
libservice_la_SOURCES = \
						xmppauth.cc \
						xmpppump.cc \
						xmppsocket.cc \
						xmppthread.cc \
						talkclient.cc \
						presenceouttask.cc \
						presencepushtask.cc \
						jingleinfotask.cc \
						rostergettask.cc \
						pingtask.cc \
						message.cc

