AM_CPPFLAGS = $(JINGLE_CPPDEFINES) $(JINGLE_CCFLAGS) $(JINGLE_CXXFLAGS)
AM_CPPFLAGS += -I$(top_srcdir)
noinst_LTLIBRARIES = libp2p.la
libp2p_la_SOURCES = \
      		 base/constants.cc \
           base/p2ptransport.cc \
           base/p2ptransportchannel.cc \
           base/parsing.cc \
           base/port.cc \
           base/pseudotcp.cc \
           base/relayport.cc \
           base/relayserver.cc \
           base/rawtransport.cc \
           base/rawtransportchannel.cc \
           base/session.cc \
           base/sessiondescription.cc \
           base/sessionmanager.cc \
           base/sessionmessages.cc \
           base/stun.cc \
           base/stunport.cc \
           base/stunrequest.cc \
           base/stunserver.cc \
           base/tcpport.cc \
           base/transport.cc \
           base/transportchannel.cc \
           base/transportchannelproxy.cc \
           base/udpport.cc \
           client/basicportallocator.cc \
           client/httpportallocator.cc \
           client/socketmonitor.cc
