AM_CPPFLAGS = $(JINGLE_CPPDEFINES) $(JINGLE_CCFLAGS) $(JINGLE_CXXFLAGS)
AM_CPPFLAGS += -I$(top_srcdir)
noinst_LTLIBRARIES = libsound.la
libsound_la_SOURCES = \
               soundsystemproxy.cc \
               soundsysteminterface.cc \
               pulseaudiosymboltable.cc \
               platformsoundsystemfactory.cc \
               platformsoundsystem.cc \
               linuxsoundsystem.cc \
               alsasymboltable.cc \
               alsasoundsystem.cc 
               
               
               
               
               
               
