AM_CPPFLAGS = $(JINGLE_CPPDEFINES) $(JINGLE_CCFLAGS) $(JINGLE_CXXFLAGS)
AM_CPPFLAGS += -I$(prefix)/include -I$(top_srcdir)

noinst_LTLIBRARIES = libxmllite.la
libxmllite_la_SOURCES = \
            xmlprinter.cc \
           	xmlparser.cc \
           	xmlnsstack.cc \
           	xmlelement.cc \
           	xmlconstants.cc \
           	xmlbuilder.cc \
           	qname.cc    
               
               
               
               
               
