AM_CPPFLAGS = $(JINGLE_CPPDEFINES) $(JINGLE_CCFLAGS) $(JINGLE_CXXFLAGS)
AM_CPPFLAGS += -I$(top_srcdir)
noinst_LTLIBRARIES = libxmpp.la
libxmpp_la_SOURCES = \
           	xmpptask.cc \
           	xmppstanzaparser.cc \
           	xmpplogintask.cc \
           	xmppengineimpl_iq.cc \
           	xmppengineimpl.cc \
           	xmppclient.cc \
           	saslmechanism.cc \
           	ratelimitmanager.cc \
           	mucroomlookuptask.cc \
           	jid.cc \
           	iqtask.cc \
           	constants.cc 
           	
               
               
               
               
               
